fix: test fail, resource-check.sh
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/other/allowed-image-repos/99-delete.yaml
+++ b/other/allowed-image-repos/99-delete.yaml
@@ -4,3 +4,5 @@ delete:
 - apiVersion: kyverno.io/v1
   kind: ClusterPolicy
   name: allowed-image-repos
+commands:
+- command: kubectl delete all --all --force --grace-period=0 -n allowed-image-repos-ns
