--- a/other/allowed-image-repos/01-enforce.yaml
+++ b/other/allowed-image-repos/01-enforce.yaml
@@ -3,3 +3,5 @@ kind: TestStep
 commands:
 - script: |
     sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' allowed-image-repos.yaml | kubectl create -f - 
+apply:
+- ns.yaml
