--- a/other/allowed-image-repos/podcontroller-good.yaml
+++ b/other/allowed-image-repos/podcontroller-good.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     app: busybox
   name: gooddeployment01
+  namespace: allowed-image-repos-ns
 spec:
   replicas: 1
   selector:
@@ -28,6 +29,7 @@ metadata:
   labels:
     app: busybox
   name: gooddeployment02
+  namespace: allowed-image-repos-ns
 spec:
   replicas: 1
   selector:
@@ -52,6 +54,7 @@ apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: goodcronjob01
+  namespace: allowed-image-repos-ns
 spec:
   schedule: "* * * * *"
   jobTemplate:
@@ -70,6 +73,7 @@ apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: goodcronjob02
+  namespace: allowed-image-repos-ns
 spec:
   schedule: "* * * * *"
   jobTemplate:
