fix: requested changes
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -64,10 +64,10 @@ jobs:
           GOBIN=$(pwd)/.tools/ go install github.com/kyverno/kuttl/cmd/kubectl-kuttl@main
           curl -LO "https://dl.k8s.io/release/${{ matrix.k8s-version.version }}/bin/linux/amd64/kubectl"
           sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
-      - name: Install Kyverno CLI
+      - name: Install latest Kyverno CLI
         run: |
-          curl -LO https://github.com/kyverno/kyverno/releases/download/v1.10.0/kyverno-cli_v1.10.0_linux_x86_64.tar.gz
-          tar -xvf kyverno-cli_v1.10.0_linux_x86_64.tar.gz
+          curl -L $(curl -s "https://api.github.com/repos/kyverno/kyverno/releases/latest" | grep browser_download_url | grep kyverno-cli | grep linux_x86_64.tar.gz\" | cut -d '"' -f 4) -o kyverno-cli.tar.gz
+          tar -xvf kyverno-cli.tar.gz
           sudo cp kyverno /usr/local/bin/
       - name: Create kind cluster
         run: |
