--- a/other/ingress-host-match-tls/ingress-good.yaml
+++ b/other/ingress-host-match-tls/ingress-good.yaml
@@ -114,3 +114,88 @@ spec:
   - hosts:
     - endpoint01
     - endpoint02
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: goodingress05
+spec:
+  ingressClassName: nginx-int
+  rules:
+  - host: foo.bar.com
+    http:
+      paths:
+      - path: /testpath
+        pathType: Prefix
+        backend:
+          service:
+            name: test
+            port:
+              number: 80
+  - host: endpoint02
+    http:
+      paths:
+      - path: /testpath
+        pathType: Prefix
+        backend:
+          service:
+            name: test
+            port:
+              number: 80
+  tls:
+  - hosts:
+    - endpoint02
+    - foo.bar.com
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: goodingress06
+spec:
+  ingressClassName: nginx-int
+  rules:
+  - host: endpoint01
+    http:
+      paths:
+      - path: /foo
+        pathType: Prefix
+        backend:
+          service:
+            name: bar
+            port:
+              number: 80
+  - host: "*.foo.com"
+    http:
+      paths:
+      - path: /bar
+        pathType: Prefix
+        backend:
+          service:
+            name: test
+            port:
+              number: 80
+  tls:
+  - hosts:
+    - endpoint01
+    - "*.foo.com"
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: goodingress07
+spec:
+  defaultBackend:
+    resource:
+      apiGroup: k8s.example.com
+      kind: StorageBucket
+      name: foo-bar
+  rules:
+    - http:
+        paths:
+          - path: /foo
+            pathType: ImplementationSpecific
+            backend:
+              resource:
+                apiGroup: k8s.example.com
+                kind: StorageBucket
+                name: foo-bar
