test: 7 tests from others
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/other/prepend-image-registry/failpatchedResource.yaml
+++ b/other/prepend-image-registry/failpatchedResource.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   automountServiceAccountToken: false
   initContainers:
-  - name: kyverno
+  - name: kyverno-init
     image: kyverno/kyverno:latest
   - name: busybox
     image: busybox:1.28
