--- a/other/prepend-image-registry/pods.yaml
+++ b/other/prepend-image-registry/pods.yaml
@@ -1,14 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: mypod
+  name: pod01
 spec:
   automountServiceAccountToken: false
-  initContainers:
-  - name: kyverno-init
-    image: kyverno/kyverno:latest
-  - name: busybox
-    image: busybox:1.28
   containers:
   - name: kyverno
     image: kyverno/kyverno:1.2.3
