fix: root image in trustworthy-registries-set-root
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/other/only-trustworthy-registries-set-root/pod-bad.yaml
+++ b/other/only-trustworthy-registries-set-root/pod-bad.yaml
@@ -18,7 +18,7 @@ spec:
   - name: busybox
     image: busybox:1.35
   - name: kyverno02
-    image: ghcr.io/kyverno/kyverno:latest
+    image: ghcr.io/nginx-proxy/nginx-proxy:latest
 ---
 apiVersion: v1
 kind: Pod
@@ -28,6 +28,6 @@ metadata:
 spec:
   containers:
   - name: kyverno01
-    image: ghcr.io/kyverno/kyverno:latest
+    image: ghcr.io/nginx-proxy/nginx-proxy:latest
   - name: busybox
     image: busybox:1.35
