--- a/other/only-trustworthy-registries-set-root/pod-good.yaml
+++ b/other/only-trustworthy-registries-set-root/pod-good.yaml
@@ -15,7 +15,19 @@ metadata:
   namespace: trust-registry-ns
 spec:
   containers:
-  - name: kyverno01
+  - name: nginx-proxy
+    image: ghcr.io/nginx-proxy/nginx-proxy:latest
+  - name: kyverno
     image: ghcr.io/kyverno/kyverno:latest
-  - name: kyverno02
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: goodpod03
+  namespace: trust-registry-ns
+spec:
+  containers:
+  - name: kyverno
     image: ghcr.io/kyverno/kyverno:latest
+  - name: nginx-proxy
+    image: ghcr.io/nginx-proxy/nginx-proxy:latest
