test: kubeops, argo-cluster-generation-from-rancher-capi, consul
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,14 +30,14 @@ jobs:
           - best-practices
           - castai
           - cert-manager
-          # - consul
+          - consul
           - external-secret-operator
           - flux
           - istio
           - karpenter
           - kasten
           - kubecost
-          # - kubeops
+          - kubeops
           - kubevirt
           - linkerd
           - nginx-ingress
