--- a/kubeops/config-syncer-secret-generation-from-rancher-capi/config-syncer-secret-generation-from-rancher-capi.yaml
+++ b/kubeops/config-syncer-secret-generation-from-rancher-capi/config-syncer-secret-generation-from-rancher-capi.yaml
@@ -54,22 +54,14 @@ spec:
               "user": data.value | base64_decode(@) | parse_yaml(@).users[].user[] | [0] } || '\[\]'
           }}
         jmesPath: 'to_string(@)'
-#    - name: kubeconfigContextsData # Enable when Kyverno variable substitution bug is resolved
-#      variable:
-#        value: |
-#          {{ secretList | [].{
-#              "name": replace_all(metadata.name, '-kubeconfig', ''),
-#              "context": { "cluster": metadata.name, "user": metadata.name } }
-#          }}
-#        jmesPath: 'to_string(@)'
-    - name: kubeconfigContextsData # Use until Kyverno variable substitition bug is resolved
+    - name: kubeconfigContextsData
       variable:
         value: |
           {{ secretList | [].{
               "name": replace_all(metadata.name, '-kubeconfig', ''),
-              "context": ['CLUSTER_BEGIN', replace_all(metadata.name, '-kubeconfig', ''), 'CLUSTER_END', 'USER_BEGIN', replace_all(metadata.name, '-kubeconfig', ''), 'USER_END'] } || '\[\]'
+              "context": { "cluster": metadata.name, "user": metadata.name } }
           }}
-        jmesPath: "to_string(@) | replace_all(@, '[\"CLUSTER_BEGIN\",', '{\"cluster\":') | replace_all(@, '\"CLUSTER_END\",\"USER_BEGIN\",', '\"user\":') | replace_all(@, ',\"USER_END\"]', '}')"
+        jmesPath: 'to_string(@)'
     - name: kubeconfigData
       variable:
         value: |
