--- a/kubeops/config-syncer-secret-generation-from-rancher-capi/02-policy.yaml
+++ b/kubeops/config-syncer-secret-generation-from-rancher-capi/02-policy.yaml
@@ -2,6 +2,6 @@ apiVersion: kuttl.dev/v1beta1
 kind: TestStep
 apply:
 - config-syncer-secret-generation-from-rancher-capi.yaml
-- setup.yaml
 assert:
 - policy-ready.yaml
+- secret-generated01.yaml
