fix: default metadataLabels in argo secret gen
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/argo/argo-cluster-generation-from-rancher-capi/argo-cluster-generation-from-rancher-capi.yaml
+++ b/argo/argo-cluster-generation-from-rancher-capi/argo-cluster-generation-from-rancher-capi.yaml
@@ -53,6 +53,7 @@ spec:
     - name: metadataLabels
       variable:
         jmesPath: request.object.metadata.labels
+        default: {}
     - name: metadataLabels
       variable:
         jmesPath: merge(metadataLabels, extraLabels)
