fix: requested changes
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/kasten/k10-generate-gold-backup-policy/01-clusterrole.yaml
+++ b/kasten/k10-generate-gold-backup-policy/01-clusterrole.yaml
@@ -8,10 +8,9 @@ metadata:
     app.kubernetes.io/part-of: kyverno
 rules:
 - apiGroups:
-  - '*'
+  - 'config.kio.kasten.io'
   resources:
   - policies
-  - namespaces
   verbs:
   - create
   - update
