--- a/other/refresh-env-var-in-pod/03-secret.yaml
+++ b/other/refresh-env-var-in-pod/03-secret.yaml
@@ -1,7 +1,15 @@
 apiVersion: v1
 data:
-    foo: YmFyCg==
+    foo: YmFy
 kind: Secret
 metadata:
     namespace: refresh-env-var-ns
     name: env-secret
+---
+apiVersion: v1
+data:
+    foo: YmFy
+kind: Secret
+metadata:
+    namespace: refresh-env-var-ns
+    name: not-env-secret
