--- a/other/refresh-env-var-in-pod/secret.yaml
+++ b/other/refresh-env-var-in-pod/secret.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  foo: bGFiZWw=
+  foo: Zm9v
 kind: Secret
 metadata:
   labels: 
@@ -11,7 +11,7 @@ metadata:
 ---
 apiVersion: v1
 data:
-  foo: bGFiZWw=
+  foo: Zm9v
 kind: Secret
 metadata:
   namespace: refresh-env-var-ns
