--- a/other/require-imagepullsecrets/pod-bad.yaml
+++ b/other/require-imagepullsecrets/pod-bad.yaml
@@ -28,3 +28,14 @@ spec:
     image: busybox:1.35
   - name: nginx
     image: ghcr.io/nginx:1.12
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod03
+spec:
+  containers:
+  - name: busybox
+    image: quay.io/quay/busybox:1.35
+  - name: busybox02
+    image: busybox:1.35
