--- a/other/require-imagepullsecrets/pod-good.yaml
+++ b/other/require-imagepullsecrets/pod-good.yaml
@@ -30,3 +30,16 @@ spec:
     image: busybox:1.35
   imagePullSecrets:
   - name: myregistrykey
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: goodpod04
+spec:
+  containers:
+  - name: nginx
+    image: nginx:1.12
+  - name: busybox
+    image: quay.io/quay/busybox
+  imagePullSecrets:
+  - name: myregistrykey
