--- a/other/require-netpol/deploy-bad.yaml
+++ b/other/require-netpol/deploy-bad.yaml
@@ -38,3 +38,44 @@ spec:
         image: busybox:1.35
         ports:
         - containerPort: 80
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: baddeploy03
+  namespace: require-netpol-ns
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: busybox
+  template:
+    metadata:
+      labels:
+        app: busybox
+        see: saw
+    spec:
+      containers:
+      - name: busybox
+        image: busybox:1.35
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: baddeploy04
+  namespace: require-netpol-ns
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: nginbox
+  template:
+    metadata:
+      labels:
+        app: nginbox
+        saw: see
+        foo: bar
+    spec:
+      containers:
+      - name: busybox
+        image: busybox:1.35
