fix deprecated command bases with resources
Signed-off-by: Serge Hartmann <shartmann@questel.com>

--- a/pod-security/enforce/kustomization.yaml
+++ b/pod-security/enforce/kustomization.yaml
@@ -1,4 +1,4 @@
-bases:
+resources:
 - ../restricted
 
 patches:
@@ -7,4 +7,4 @@ patches:
         path: /spec/validationFailureAction
         value: enforce
     target:
-      kind: ClusterPolicy 
+      kind: ClusterPolicy
