--- a/other/refresh-volumes-in-pods/04-check.yaml
+++ b/other/refresh-volumes-in-pods/04-check.yaml
@@ -4,13 +4,23 @@ commands:
 - command: sleep 5
 - script: |
     annotation=$(kubectl get pod pod01 -n refresh-vols-ns -o json | kyverno jp query "metadata.annotations.\"corp.org/random\" || '' " | tail -n 1 | cut -d '"' -f 2)
-    if [ "$annotation" = "" ]; then exit 1; exit 0; fi
+    if [ "$annotation" = "" ]; then exit 1; else exit 0; fi
 - script: |
     annotation=$(kubectl get pod pod02 -n refresh-vols-ns -o json | kyverno jp query "metadata.annotations.\"corp.org/random\" || '' " | tail -n 1 | cut -d '"' -f 2)
-    if [ "$annotation" = "1234abcd" ]; then exit 1; exit 0; fi
+    if [ "$annotation" = "1234abcd" ]; then exit 1; else exit 0; fi
 - script: |
     annotation=$(kubectl get pod pod03 -n refresh-vols-ns -o json | kyverno jp query "metadata.annotations.\"corp.org/random\" || '' " | tail -n 1 | cut -d '"' -f 2)
-    if [ "$annotation" = "1234abcd" ]; then exit 0; exit 1; fi
+    if [ "$annotation" = "1234abcd" ]; then exit 0; else exit 1; fi
 - script: |
     annotation=$(kubectl get pod pod04 -n refresh-vols-ns -o json | kyverno jp query "metadata.annotations.\"corp.org/random\" || '' " | tail -n 1 | cut -d '"' -f 2)
-    if [ "$annotation" = "1234abcd" ]; then exit 0; exit 1; fi
+    if [ "$annotation" = "1234abcd" ]; then exit 0; else exit 1; fi
+- script: |
+    val=$(kubectl exec pod01 -n refresh-vols-ns -- cat /mnt/foo/foo)
+    if [ "$val" = "bar" ]; then exit 0; else exit 1; fi
+- script: |
+    val=$(kubectl exec pod02 -n refresh-vols-ns -- cat /mnt/foo/foo)
+    if [ "$val" = "bar" ]; then exit 0; else exit 1; fi
+- script: |
+    val=$(kubectl exec pod04 -n refresh-vols-ns -- cat /mnt/foo/foo)
+    if [ "$val" = "bar" ]; then exit 0; else exit 1; fi
+- command: kubectl delete all --all --force --grace-period=0 -n refresh-vols-ns
