--- a/other/refresh-volumes-in-pods/03-cm.yaml
+++ b/other/refresh-volumes-in-pods/03-cm.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  bar: foo
+  foo: bar
 kind: ConfigMap
 metadata:
   namespace: refresh-vols-ns
@@ -8,7 +8,7 @@ metadata:
 ---
 apiVersion: v1
 data:
-  bar: foo
+  foo: bar
 kind: ConfigMap
 metadata:
   namespace: refresh-vols-ns
