--- a/other/refresh-volumes-in-pods/cm.yaml
+++ b/other/refresh-volumes-in-pods/cm.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  foo: bar
+  foo: foo
 kind: ConfigMap
 metadata:
   labels:
@@ -11,7 +11,7 @@ metadata:
 ---
 apiVersion: v1
 data:
-  foo: bar
+  foo: foo
 kind: ConfigMap
 metadata:
   name: not-refresh-cm
