--- a/other/require-unique-external-dns/svc-good.yaml
+++ b/other/require-unique-external-dns/svc-good.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    external-dns.alpha.kubernetes.io/hostname: "1.0.0.1"
+    external-dns.alpha.kubernetes.io/hostname: "dns.k8s.io"
   name: goodsvc01
 spec:
   ports:
@@ -17,7 +17,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    external-dns.alpha.kubernetes.io/hostname: "8.8.4.4"
+    external-dns.alpha.kubernetes.io/hostname: "dns.foo.bar"
   name: goodsvc02
 spec:
   ports:
