--- a/other/require-unique-external-dns/svc.yaml
+++ b/other/require-unique-external-dns/svc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    external-dns.alpha.kubernetes.io/hostname: "1.1.1.1"
+    external-dns.alpha.kubernetes.io/hostname: "dns.kyverno.io"
   name: svc01
 spec:
   ports:
@@ -17,7 +17,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    external-dns.alpha.kubernetes.io/hostname: "8.8.8.8"
+    external-dns.alpha.kubernetes.io/hostname: "dns.bar.foo"
   name: svc02
 spec:
   ports:
