--- a/other/restart-deployment-on-secret-change/02-policy.yaml
+++ b/other/restart-deployment-on-secret-change/02-policy.yaml
@@ -4,3 +4,5 @@ apply:
 - restart-deployment-on-secret-change.yaml
 assert:
 - policy-ready.yaml
+commands:
+- script: kubectl get secret -n default mysecret -o jsonpath='{.metadata.resourceVersion}' > resource-version.txt
