--- a/other/restrict-annotations/99-delete.yaml
+++ b/other/restrict-annotations/99-delete.yaml
@@ -3,4 +3,4 @@ kind: TestStep
 delete:
 - apiVersion: kyverno.io/v1
   kind: ClusterPolicy
-  name: require-unique-uid-per-workload
+  name: restrict-annotations
