--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,7 +42,13 @@ jobs:
           - linkerd
           - nginx-ingress
           - openshift
-          - other
+          - other/a
+          - other/b-d
+          - other/e-l
+          - other/m-p
+          - other/rec-req
+          - other/res
+          - other/s-v
           # - pod-security
           # - psa
           - psp-migration
