Updating test.yml
Signed-off-by: Pradyot Ranjan <99216956+pradyotRanjan@users.noreply.github.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,6 +42,7 @@ jobs:
           - linkerd
           - nginx-ingress
           - openshift
+          # - other
           - other/a
           - other/b-d
           - other/e-l
