--- a/other/b-d/cordon-and-drain-node/cordon-and-drain-node.yaml
+++ b/other/b-d/cordon-and-drain-node/cordon-and-drain-node.yaml
@@ -7,6 +7,7 @@ metadata:
     policies.kyverno.io/category: other
     policies.kyverno.io/subject: Node
     kyverno.io/kyverno-version: 1.10.1
+    policies.kyverno.io/minversion: 1.10.0
     kyverno.io/kubernetes-version: "1.26"
     policies.kyverno.io/description: >-
       There are cases where either an operations or security incident may occur and Nodes
