add new rule to restrict-ingress-host just for UPDATEs
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/res/restrict-ingress-host/02-manifests.yaml
+++ b/other/res/restrict-ingress-host/02-manifests.yaml
@@ -5,3 +5,7 @@ apply:
   shouldFail: false
 - file: ingress-bad.yaml
   shouldFail: true
+- file: ingress-updates-bad.yaml
+  shouldFail: true
+- file: ingress-updates-good.yaml
+  shouldFail: false
