--- a/other/res/restrict-ingress-host/resource.yaml
+++ b/other/res/restrict-ingress-host/resource.yaml
@@ -14,7 +14,6 @@ spec:
             name: service1
             port:
               number: 80
-
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -32,7 +31,7 @@ spec:
             name: service2
             port:
               number: 80
-  - host: "foo.bar.com"
+  - host: foo.bar.com
     http:
       paths:
       - pathType: Prefix
@@ -42,6 +41,3 @@ spec:
             name: service1
             port:
               number: 80
-
-
-
