--- a/other/res/restrict-secrets-by-label/pod-bad.yaml
+++ b/other/res/restrict-secrets-by-label/pod-bad.yaml
@@ -78,6 +78,34 @@ kind: Pod
 metadata:
   name: badpod04
 spec:
+  initContainers:
+    - name: busybox-init
+      image: busybox:1.35
+      envFrom:
+      - secretRef:
+          name: not-secret
+    - name: busybox02-init
+      image: busybox:1.35
+  containers:
+    - name: busybox
+      image: busybox:1.35
+      envFrom:
+      - secretRef:
+          name: top-secret
+    - name: busybox02
+      image: busybox:1.35
+      env:
+      - name: ENV_SECRET
+        valueFrom:
+          secretKeyRef:
+            name: not-so-secret
+            key: foo
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod05
+spec:
   containers:
     - name: busybox
       image: busybox:1.35
