--- a/other/res/restrict-secret-role-verbs/cr-bad.yaml
+++ b/other/res/restrict-secret-role-verbs/cr-bad.yaml
@@ -21,3 +21,12 @@ rules:
 - apiGroups: [""]
   resources: ["namespaces", "secrets", "pods"]
   verbs: ["create", "watch", "list"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: badcr03
+rules:
+- apiGroups: [""]
+  resources: ["secrets"]
+  verbs: ["update", "list", "create"]
