test: 5 tests from others
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,14 +42,13 @@ jobs:
           - linkerd
           - nginx-ingress
           - openshift
-          # - other
           - other/a
           - other/b-d
           - other/e-l
           - other/m-q
           - other/rec-req
           - other/res
-          # - other/s-z
+          - other/s-z
           # - pod-security
           # - psa
           - psp-migration
