test: update-image-tag
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/other/s-z/update-image-tag/update-image-tag.yaml
+++ b/other/s-z/update-image-tag/update-image-tag.yaml
@@ -32,6 +32,7 @@ spec:
       targets:
         - apiVersion: apps/v1
           kind: Deployment
+          name: "{{ request.object.metadata.name }}"
       patchStrategicMerge:
         spec:
           template:
