test: 11 tests from pod-security/baseline
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,7 +49,7 @@ jobs:
           - other/rec-req
           - other/res
           - other/s-z
-          # - pod-security
+          - pod-security
           # - psa
           - psp-migration
           # - tekton
