fix: split resource yamls, mutate-existing check
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/other/s-z/update-image-tag/04-check.yaml
+++ b/other/s-z/update-image-tag/04-check.yaml
@@ -1,6 +1,7 @@
 apiVersion: kuttl.dev/v1beta1
 kind: TestStep
 assert:
+- deploy00-patched.yaml
 - deploy01-patched.yaml
 - deploy02-patched.yaml
 error:
